fix text-overflow bug

--- a/image_editor/static/css/style.css
+++ b/image_editor/static/css/style.css
@@ -83,6 +83,7 @@ html {
 
 p.media-heading {
     margin-left: 20px;
+    width: 100px;
 }
 
 .upload-div .input-group {
